[package]
name = "nadi-gis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
gdal = "0.17.1"
gdal-sys = { version = "0.10.0", features = ["bindgen"] }
ordered-float = "4.4.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
