[package]
name = "nadi-gis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
gdal = { version = "0.18.0", features = ["bindgen"] }
gdal-sys = { version = "0.11.0"}
itertools = "0.13.0"
ordered-float = "4.4.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
rstar = "0.12.0"
