[package]
name = "gis"
version = "0.4.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
chrono = "0.4.38"
colored = "2.1.0"
gdal = "0.18.0"
gdal-sys = "0.11.0"
nadi_core = {version = "0.7.0", path = "../../nadi-system/nadi_core", features=["chrono"]}
text-diff = "0.4.0"
toml = { version = "0.8.19", features = ["preserve_order"] }

[features]
bindgen = ["gdal/bindgen"]